Enhance documentation and refactor settings panels
- Added Javadoc comments to `SettingsDebugPanel`, `SettingsForm`, and `SettingsGenPanel` classes to improve code readability and maintainability.
- Refactored `SettingsForm` to introduce helper methods for setting property values, improving code clarity and reducing duplication.
- Updated `CaseInsensitiveString` to include additional methods for case-insensitive comparisons.
- Enhanced `EnhJSO` with new methods for better type handling and property manipulation, including nullable types and iteration over nested properties.
- Improved the handling of property values in `SettingsGenPanel` by using constants for field names, ensuring consistency and reducing magic strings.